[package]
name = "bpfcontain"
version = "0.0.6"
authors = ["William Findlay <william@williamfindlay.com>"]
edition = "2018"
license = "GPL-2.0-or-later"
autotests = false

[[bin]]
name = "bpfcontain"

[[test]]
name = "integration"
path = "tests/lib.rs"

[lib]
name = "bpfcontain"

[dependencies]
bpfcontain_uprobes = { path = "./bpfcontain_uprobes" }
anyhow = "1.0.36"
libbpf-rs = "0.12.0"
clap = "2.33.3"
libc = "0.2.81"
daemonize = "0.4.1"
log = "0.4.11"
goblin = "0.3.0"
bitflags = "1.2.1"
serde_yaml = "0.8.14"
serde = { version = "1.0.118", features = ["derive"] }
glob = "0.3.0"
config = "0.11.0"
nix = "0.17"
regex = "1.4.3"
lazy_static = "1.4.0"
enum_dispatch = "0.3.7"
log4rs = "1.0.0"
procfs = "0.9.1"
fs2 = "0.4.3"
plain = "0.2.3"
serde_json = "1.0.64"
toml = "0.5.8"
object = "0.25"

[build-dependencies]
bindgen = "0.56.0"
glob = "0.3.0"
uname = "0.1.1"
libbpf-cargo = "0.9.0"

[dev-dependencies]
ctor = "0.1.20"
